# thingsboard-edge-gateway

./: .buildinfo  .env.example  .gitignore  Dockerfile  README.md  build_gateway_runner_docker_image.sh  changelog.html  dev-requirements.txt  gateway_runner_Dockerfile  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup_and_run_gateway_process.sh
.doctrees/: changelog.doctree  (+2 more)
setup/temperature-control/: README.md  main.py  pyproject.toml
setup/temperature-control/utils/: get_gpio_pin_factory.py  read_temperature.py  set_heater.py  set_ventilator.py
software/: README.md  pyproject.toml
software/controller/: .gitignore  README.md  pyproject.toml
software/controller/config/: .env.template  calibration_cylinders.csv  config.template.json
software/controller/docker/: Dockerfile  docker_build.sh  docker_run.sh
software/controller/scripts/integration/: run_system_check.py
software/controller/src/: README.md  main.py
software/controller/src/custom_types/: README.md  __init__.py  config.py  config_types.py  mqtt_playload_types.py  sensor_answers.py  sensor_types.py  state.py  state_types.py
software/controller/tests/: README.md  conftest.py  pytest_utils.py
software/docker/: Dockerfile  docker_build.sh  docker_run_daemon.sh
software/gateway/: README.md  build_gateway_runner_docker_image.sh  dev-requirements.txt  gateway_runner.sh  requirements.txt
software/gateway/scripts/: run_mypy.sh
software/gateway/src/: args.py  main.py  self_provisioning.py
software/src/: main.py
software/src/custom_types/: __init__.py  mqtt_sending.py  state.py  thingsboard_playloads.py
software/src/hardware/: __init__.py  gmp343_sensor.py
software/src/procedures/: __init__.py  calibration.py  configuration.py  measurement.py  mqtt_agent.py  system_check.py
software/src/utils/: __init__.py  logger.py  message_queue.py  mqtt_connection.py
software/tests/: conftest.py  pytest_utils.py
software/tests/communication_interfaces/: test_logger.py  test_messaging_loops.py  test_mqtt_connection.py  test_mqtt_receiving.py  test_mqtt_sending.py
software/tests/local_files/: test_cli_startup.py  test_env_vars.py
(+329 files in other folders)
