[tool.poetry]
name = "software"
version = "1"
description = ""
authors = ["Patrick Aigner <patrick.aigner@tum.de>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12.4"
smbus2 = "^0.4.2"
rpi-bme280 = "^0.2.4"
filelock = "^3.9.0"
pytest-ordering = "^0.6"
click = "^8.1.3"
adafruit-circuitpython-sht4x = "^1.0.15"
rpi-gpio = {version = "^0.7.1", markers = "platform_machine == 'aarch64' and platform_system == 'Linux'"}
gpiozero = "^2.0.1"
psutil = "^6.0.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
pigpio = "^1.78"
pytest = "^8.3.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.11.2"
types-psutil = "^6.0.0.20240901"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "github_action: runs on commits to main and pull requests",
    "remote_update: required to pass when updating software on edge node",
    "hardware_interface: runs locally on edge node, toggled by config",
    "last: provided by the `pytest-ordering` library"
]

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pigpio",
    "bme280",
    "gpiozero",
    "gpiozero.*",
    "smbus2",
    "serial",
    "filelock",
    "busio",
    "board",
    "adafruit_sht4x",
    "RPi.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88